--- a/index.html
+++ b/index.html
@@ -15,14 +15,27 @@
 	</head>
 	<body>
 
+		<!-- Nav -->
+			<section id="nav">
+				<a href="#home">
+					<img src="images/logo.png">
+					<ul>
+						<li><a href="">Item</a></li>
+						<li><a href="">Item</a></li>
+						<li><a href="">Item</a></li>
+						<li><a href="">Item</a></li>
+					</ul>
+				</a>
+			</section>
+
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<img src="images/logo-heading.png">
+					<p>Women inspiring <span class="inspired">women</span></p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
+					<a href="#banner" class="button style2 scrolly-middle">Join our mailing list for info</a>
 				</footer>
 			</section>
 
