Inspiring on heroo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="header">
 				<header>
 					<img src="images/logo-heading.png">
-					<p>Women inspiring <span class="inspired">women</span></p>
+					<p>Women inspiring <span class="inspired">Women</span></p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Join our mailing list for info</a>
@@ -41,15 +41,19 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<header>
-					<h2>This is Overflow</h2>
-				</header>
-				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
-				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
-				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
-				<footer>
+				<div class="container">
+					<header>
+						<h2>This is Overflow</h2>
+					</header>
+					<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p>
+					<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female.</p>
+					<p>This event strives to celebrate the individuals behind the figures, and share their fascinating life experiences in the tech industry.</p>
+					<p>There will be three parts to the day; talks from some of the most fascinating women within the tech industry, workshops; from hands on programming to smaller talks, and opportunities to network with some of the best companies around.</p>
+					<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career. <b>We want to get students excited by their potential.</b></p>
+				</div>
+				<!-- <footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
-				</footer>
+				</footer> -->
 			</section>
 
 		<!-- Feature 1 -->
