--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
 	</head>
 	<body>
 
@@ -43,13 +44,19 @@
 			<section id="banner">
 				<div class="container">
 					<header>
-						<h2>This is Overflow</h2>
+						<h2 class="section-title">About</h2>
 					</header>
-					<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p>
-					<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female.</p>
-					<p>This event strives to celebrate the individuals behind the figures, and share their fascinating life experiences in the tech industry.</p>
-					<p>There will be three parts to the day; talks from some of the most fascinating women within the tech industry, workshops; from hands on programming to smaller talks, and opportunities to network with some of the best companies around.</p>
-					<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career. <b>We want to get students excited by their potential.</b></p>
+					<div class="row 100%">
+						<div class="col 6u 12u">
+							<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p>
+							<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female.</p>
+							<p>This event strives to celebrate the individuals behind the figures, and share their fascinating life experiences in the tech industry.</p>
+						</div>
+						<div class="col 6u 12u">
+							<p>There will be three parts to the day; talks from some of the most fascinating women within the tech industry, workshops; from hands on programming to smaller talks, and opportunities to network with some of the best companies around.</p>
+							<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career. <b>We want to get students excited by their potential.</b></p>
+						</div>
+					</div>
 				</div>
 				<!-- <footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
@@ -126,7 +133,7 @@
 			</article>
 
 		<!-- Generic -->
-		<!--
+		
 			<article class="container box style3">
 				<header>
 					<h2>Generic Box</h2>
@@ -280,7 +287,7 @@
 					</form>
 				</section>
 			</article>
-		-->
+		
 
 		<section id="footer">
 			<ul class="icons">
