--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		<link href="assets/fonts/caviar.css" rel="stylesheet">
 	</head>
 	<body>
 
@@ -46,7 +47,7 @@
 					<header>
 						<h2 class="section-title">About</h2>
 					</header>
-					<div class="row 100%">
+					<div class="row 200%">
 						<div class="col 6u 12u">
 							<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p>
 							<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female.</p>
@@ -54,7 +55,8 @@
 						</div>
 						<div class="col 6u 12u">
 							<p>There will be three parts to the day; talks from some of the most fascinating women within the tech industry, workshops; from hands on programming to smaller talks, and opportunities to network with some of the best companies around.</p>
-							<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career. <b>We want to get students excited by their potential.</b></p>
+							<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career.</p>
+							<p><b>We want to get students excited by their potential.</b></p>
 						</div>
 					</div>
 				</div>
