--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Inspire WiT</title>
+		<title>Women in Technology</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,10 +20,10 @@
 				<a href="#home">
 					<img src="images/logo.png">
 					<ul>
-						<li><a href="">Item</a></li>
-						<li><a href="">Item</a></li>
-						<li><a href="">Item</a></li>
-						<li><a href="">Item</a></li>
+						<li><a href="">About</a></li>
+						<li><a href="">FAQ</a></li>
+						<li><a href="">Register</a></li>
+						<li><a href="">Contact</a></li>
 					</ul>
 				</a>
 			</section>
@@ -35,20 +35,22 @@
 					<p>Women inspiring <span class="inspired">women</span></p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Join our mailing list for info</a>
+					<a href="#banner" class="button style2 scrolly-middle">A gender inclusive event for EVERYONE</a>
 				</footer>
 			</section>
 
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>About Women in Technology</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
-				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
-				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p><br /> 
+
+				<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female. This event strives to celebrate the individuals behind the figures, and share their fascinating life experiences in the tech industry.</p><br />
+
+				<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career.</p><br />
 				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
+					<a href="#first" class="button style2 scrolly">What happens at Women in Technology?</a>
 				</footer>
 			</section>
 
@@ -57,10 +59,10 @@
 				<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
+						<h2>TALKS</h2>
 					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+					<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry.<br /> 
+					We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
 				</div>
 			</article>
 
@@ -69,19 +71,52 @@
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Mollis posuere<br />
-						lectus lacus</h2>
+						<h2>WORKSHOPS</h2>
 					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+					<p>After the talks there is opportunity for our attendees to pick up a new skill. Never coded before? Do not panic, we provide entry level workshops that are suitable for everyone no matter your previous experience or background. Choose from a range of subjects from idea generation to learning how to code. <br /> 
+					We aim to provide attendees with the chance to learn something new.</p>
 				</div>
 			</article>
 
-		<!-- Portfolio -->
+		<!-- Feature 3 -->
+			<article class="container box style1 right">
+				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2>NETWORKING</h2>
+					</header>
+					<p>During the Women in Technology conference, we provide our attendees with ample opportunity to network with representatives from local, national and international technology companies. Whether you are interested in tech as a career or just have some questions about specific subjects our partners are on hand to chat to our attendees throughout the day.</p>
+				</div>
+			</article>
+
+		<!-- Previous Event Gallery
 			<article class="container box style2">
 				<header>
-					<h2>Magnis parturient</h2>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
+					<h2>#WIT16</h2>
+					<p> Below are a few images from our #WIT16 which ran on 20th February 2016.</p>
+				</header>
+				<div class="inner gallery">
+					<div class="row 0%">
+						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+					</div>
+					<div class="row 0%">
+						<div class="3u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+					</div>
+				</div>
+			</article>-->
+
+		<!-- Our Partners  -->
+			<article class="container box style2">
+				<header>
+					<h2>Our Partners</h2>
+					<p> Women in Technology is supported by a range of industry partners.<br /> 
+					If you are interested in becoming an event partner, contact us here.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
@@ -102,8 +137,8 @@
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
-					<h2>Nisl sed ultricies</h2>
-					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
+					<h2>Contact Us</h2>
+					<p>Have a question or want to get involved with our next event? Send us a message!</p>
 				</header>
 				<form method="post" action="#">
 					<div class="row 50%">
