update to buttons and scroll effect of nav bar links

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	<body>
 		<!-- Nav -->
 			<section id="nav">
-				<a href="#home">
+				<a href="#header" class="scrolly">
 					<img src="images/logo.png">
 					<ul>
-						<li><a href="">About</a></li>
+						<li><a href="#banner" class="scrolly">About</a></li>
 						<li><a href="">FAQ</a></li>
 						<li><a href="">Register</a></li>
-						<li><a href="">Contact</a></li>
+						<li><a href="#contact" class="scrolly">Contact</a></li>
 					</ul>
 				</a>
 			</section>
@@ -46,11 +46,11 @@
 				<header>
 					<h2>About Women in Technology</h2>
 				</header>
-				<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p><br /> 
+				<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p>
 
-				<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female. This event strives to celebrate the individuals behind the figures, and share their fascinating life experiences in the tech industry.</p><br />
+				<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female. This event strives to celebrate the individuals behind the figures, and share their fascinating life experiences in the tech industry.</p>
 
-				<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career.</p><br />
+				<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career.</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">What happens at Women in Technology?</a>
 				</footer>
@@ -145,7 +145,7 @@
 			</article>
 
 		<!-- Contact -->
-			<article class="container box style3">
+			<article id="contact" class="container box style3">
 				<header>
 					<h2>Contact Us</h2>
 					<p>Have a question or want to get involved with our next event? Send us a message!</p>
@@ -157,12 +157,6 @@
 						<div class="12u$">
 							<textarea name="message" placeholder="Message"></textarea>
 						</div>
-						<div class="12u$">
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</div>
-					</div>
 					<div class="12u$">
 						<ul class="actions">
 							<li><input type="submit" value="Send Message" /></li>
