update started on FAQ commented out additional sections

--- a/index.html
+++ b/index.html
@@ -165,9 +165,11 @@
 				</div>
 			</form>
 		</article>
+
 		<!-- Generic -->
 		
 		<article class="container box style3">
+		<!--
 			<header>
 				<h2>Generic Box</h2>
 				<p>Just a generic box. Nothing to see here.</p>
@@ -181,15 +183,17 @@
 					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
 					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
 				amet risus elit.</p>
-			</section>
-			<section>
+			</section> -->
+
+		<!--	<section>
 				<header>
 					<h3>Blockquote</h3>
 				</header>
 				<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 				tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
-			</section>
-			<section>
+			</section> -->
+
+		<!--	<section>
 				<header>
 					<h3>Divider</h3>
 				</header>
@@ -204,19 +208,25 @@
 				facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
 				tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 			posuere cubilia.</p>
-		</section>
+		</section> -->
+
 		<section>
 			<header>
-				<h3>Unordered List</h3>
+				<h3>FAQ - some commonly asked questions about Women in Technology</h3>
 			</header>
 			<ul class="default">
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+				<li>Where does the Women In Technology Event take place?<br /> 
+				<br /> 
+				It will be held at the University of Nottingham's Jubilee Campus. It will be based in the Business School South building.</li>
+
+				<li>Is Women in Technology open to everyone?<br />
+				<br >
+				YES - Everybody is welcome! Although the focus is on Women in Technology, the day itself is still a technology conference with amazing speakers, workshops and supporters. It's a valuable opportunity for everyone to come and listen to some brilliant stories and be inspired - no matter how you identify your gender!</li>
 				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
 				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
 			</ul>
 		</section>
-		<section>
+		<!-- <section>
 			<header>
 				<h3>Ordered List</h3>
 			</header>
@@ -226,7 +236,7 @@
 				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
 				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
 			</ol>
-		</section>
+		</section> -->
 		<section>
 			<header>
 				<h3>Table</h3>
