updated scroll links on nav bar, add FAQ copy from original wit 2016 and added copy for WIT interest list

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<img src="images/logo.png">
 					<ul>
 						<li><a href="#banner" class="scrolly">About</a></li>
-						<li><a href="">FAQ</a></li>
-						<li><a href="">Register</a></li>
+						<li><a href="#faq" class="scrolly">FAQ</a></li>
+						<li><a href="#reg" class="scrolly">Register</a></li>
 						<li><a href="#contact" class="scrolly">Contact</a></li>
 					</ul>
 				</a>
@@ -210,7 +210,7 @@
 			posuere cubilia.</p>
 		</section> -->
 
-		<section>
+		<section id="faq">
 			<header>
 				<h3>FAQ - some commonly asked questions about Women in Technology</h3>
 			</header>
@@ -222,8 +222,19 @@
 				<li>Is Women in Technology open to everyone?<br />
 				<br >
 				YES - Everybody is welcome! Although the focus is on Women in Technology, the day itself is still a technology conference with amazing speakers, workshops and supporters. It's a valuable opportunity for everyone to come and listen to some brilliant stories and be inspired - no matter how you identify your gender!</li>
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+
+				<li>Do we get food and drinks?<br /> 
+				<br />
+				YES! We will provide refreshments on arrival, plus lunch and treats throughout the day. Be sure to join us in the afternoon for our Women in Technology Cake Drop!</li>
+				
+				<li> Is there a code of conduct?<br />
+				<br />
+				Yes. We are dedicated to providing a fun, harassment-free experience for everyone. We expect all of our attendees, sponsors, volunteers, and staff to be respectful and considerate of others. It is expected that everyone involved in our event will follow this 
+				<a href="http://confcodeofconduct.com/">code of conduct.</a></li>
+
+				<li>What workshops can I take part in?<br /> 
+				<br /> 
+				At the last Women in Technology event we had workshops and talks given by Capital One, Code Club, ustwo, Intel Software, BCS Women and more. Our workshops are open to all levels and anyone can take part - sign ups will be offered to all ticket holders prior to the event. 
 			</ul>
 		</section>
 		<!-- <section>
@@ -237,7 +248,7 @@
 				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
 			</ol>
 		</section> -->
-		<section>
+		<!-- <section>
 			<header>
 				<h3>Table</h3>
 			</header>
@@ -285,11 +296,13 @@
 					</tfoot>
 				</table>
 			</div>
-		</section>
-		<section>
+		</section> --> 
+
+		<section id="reg">
 			<header>
-				<h3>Form</h3>
+				<h2>Register</h2>
 			</header>
+			<p>Tickets for #WIT17 will be available very soon! If you would like to receive updates about the next women in technology event please join our interest list. 
 			<form method="post" action="#">
 				<div class="row">
 					<div class="6u">
