updated final layout, interest list form edited, message sent to K Lewis with remaining requirements for completion

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			<article class="container box style2">
 				<header>
 					<h2>Our Partners</h2>
-					<p> Women in Technology is supported by a range of industry partners.<br /> 
+					<p> Every year the Women in Technology event at the University of Nottingham is supported by a range of industry partners.<br /> 
 					If you are interested in becoming an event partner, contact us here.</p>
 				</header>
 				<div class="inner gallery">
@@ -212,10 +212,10 @@
 
 		<section id="faq">
 			<header>
-				<h3>FAQ - some commonly asked questions about Women in Technology</h3>
+				<h3>FAQ - some commonly asked questions about the Women in Technology event</h3>
 			</header>
 			<ul class="default">
-				<li>Where does the Women In Technology Event take place?<br /> 
+				<li>Where does the Women In Technology event take place?<br /> 
 				<br /> 
 				It will be held at the University of Nottingham's Jubilee Campus. It will be based in the Business School South building.</li>
 
@@ -306,37 +306,16 @@
 			<form method="post" action="#">
 				<div class="row">
 					<div class="6u">
-						<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
+						<input class="text" type="text" name="name" id="name" value="" placeholder="Your Name" />
 					</div>
 					<div class="6u">
-						<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-					</div>
-				</div>
-				<div class="row">
-					<div class="12u">
-						<select name="department" id="department">
-							<option value="">Choose a department</option>
-							<option value="1">Manufacturing</option>
-							<option value="2">Administration</option>
-							<option value="3">Support</option>
-						</select>
-					</div>
-				</div>
-				<div class="row">
-					<div class="12u">
-						<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-					</div>
-				</div>
-				<div class="row">
-					<div class="12u">
-						<textarea name="message" id="message" placeholder="Enter your message"></textarea>
+						<input class="text" type="text" name="email" id="email" value="" placeholder="Your Email" />
 					</div>
 				</div>
 				<div class="row">
 					<div class="12u">
 						<ul class="actions">
-							<li><input type="submit" value="Submit" /></li>
-							<li><input type="reset" class="style3" value="Clear Form" /></li>
+							<li><input type="submit" value="Add me to the #WIT17 interest list" /></li>
 						</ul>
 					</div>
 				</div>
