--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<section id="banner">
 			<div class="container">
 				<header>
-					<h2>About Women in Technology</h2>
+					<h2 class="section-title">About Women in Technology</h2>
 				</header>
 				<p>The University of Nottingham's Women In Technology conference day is for everyone; tech enthusiasts, non-programmers, students at college or university and women or men from all walks of life.</p>
 
@@ -215,26 +215,30 @@
 				<h3>FAQ - some commonly asked questions about the Women in Technology event</h3>
 			</header>
 			<ul class="default">
-				<li>Where does the Women In Technology event take place?<br /> 
-				<br /> 
-				It will be held at the University of Nottingham's Jubilee Campus. It will be based in the Business School South building.</li>
+				<li>
+					<b>Where does the Women In Technology event take place?</b>
+					<p>It will be held at the University of Nottingham's Jubilee Campus. It will be based in the Business School South building.</p>
+				</li>
 
-				<li>Is Women in Technology open to everyone?<br />
-				<br >
-				YES - Everybody is welcome! Although the focus is on Women in Technology, the day itself is still a technology conference with amazing speakers, workshops and supporters. It's a valuable opportunity for everyone to come and listen to some brilliant stories and be inspired - no matter how you identify your gender!</li>
+				<li>
+					<b>Is Women in Technology open to everyone?</b>
+					<p>YES - Everybody is welcome! Although the focus is on Women in Technology, the day itself is still a technology conference with amazing speakers, workshops and supporters. It's a valuable opportunity for everyone to come and listen to some brilliant stories and be inspired - no matter how you identify your gender!</p>
+				</li>
 
-				<li>Do we get food and drinks?<br /> 
-				<br />
-				YES! We will provide refreshments on arrival, plus lunch and treats throughout the day. Be sure to join us in the afternoon for our Women in Technology Cake Drop!</li>
+				<li>
+					<b>Do we get food and drinks?</b>
+					<p>YES! We will provide refreshments on arrival, plus lunch and treats throughout the day. Be sure to join us in the afternoon for our Women in Technology Cake Drop!</p>
+				</li>
 				
-				<li> Is there a code of conduct?<br />
-				<br />
-				Yes. We are dedicated to providing a fun, harassment-free experience for everyone. We expect all of our attendees, sponsors, volunteers, and staff to be respectful and considerate of others. It is expected that everyone involved in our event will follow this 
-				<a href="http://confcodeofconduct.com/">code of conduct.</a></li>
+				<li>
+					<b>Is there a code of conduct?</b>
+					<p>Yes. We are dedicated to providing a fun, harassment-free experience for everyone. We expect all of our attendees, sponsors, volunteers, and staff to be respectful and considerate of others. It is expected that everyone involved in our event will follow this <a href="http://confcodeofconduct.com/">code of conduct.</a></p>
+				</li>
 
-				<li>What workshops can I take part in?<br /> 
-				<br /> 
-				At the last Women in Technology event we had workshops and talks given by Capital One, Code Club, ustwo, Intel Software, BCS Women and more. Our workshops are open to all levels and anyone can take part - sign ups will be offered to all ticket holders prior to the event. 
+				<li>
+					<b>What workshops can I take part in?</b>
+					<p>At the last Women in Technology event we had workshops and talks given by Capital One, Code Club, ustwo, Intel Software, BCS Women and more. Our workshops are open to all levels and anyone can take part - sign ups will be offered to all ticket holders prior to the event.</p>
+				</li>
 			</ul>
 		</section>
 		<!-- <section>
