added spam catcher on mailchimp

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 					<div class="response" id="mce-error-response" style="display:none"></div>
 					<div class="response" id="mce-success-response" style="display:none"></div>
 				</div>
-				<!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_59e0b168dc72e07f6fe47aa04_e4e6187a64" tabindex="-1" value=""></div> -->
+				<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_59e0b168dc72e07f6fe47aa04_e4e6187a64" tabindex="-1" value=""></div>
 				<div class="row">
 					<div class="12u">
 						<ul class="actions">
