--- a/index.html
+++ b/index.html
@@ -341,16 +341,13 @@
 	
 	<section id="footer">
 		<ul class="icons">
-			<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-			<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-			<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-			<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-			<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+			<li><a href="http://twitter.com/inspirewit" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="http://facebook.com/witnotts" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 		</ul>
 		<div class="copyright">
 			<ul class="menu">
-				<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Women in Technology</li>
+				<li>Website created and managed by the <a href="http://hacksocnotts.co.uk">HackSoc </a> community</li>
 			</ul>
 		</div>
 	</section>
