update of talks image for response testing, reorder complete

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/Audience_4.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>TALKS</h2>
@@ -143,35 +143,6 @@
 					</div>
 				</div>
 			</article>
-
-		<!-- Contact -->
-			<article id="contact" class="container box style3">
-				<header>
-					<h2>Contact Us</h2>
-					<p>Have a question or want to get involved with our next event? Send us a message!</p>
-				</header>
-				<form method="post" action="https://formspree.io/kvn@lws.io">
-					<div class="row 50%">
-						<div class="6u 12u$(mobile)">
-							<input type="text" class="text" name="name" placeholder="Name" />
-						</div>
-						<div class="6u$ 12u$(mobile)">
-							<input type="email" class="text" name="_replyto" placeholder="Email" />
-						</div>
-						<div class="12u$">
-							<textarea name="message" placeholder="Message"></textarea>
-						</div>
-						<input type="hidden" name="_subject" value="WiT Site Form Submission!" />
-						<input type="text" name="_gotcha" style="display:none" />
-						<input type="hidden" name="_next" value="http://localhost:1337#thanks" />
-						<div class="12u$">
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</div>
-				</div>
-			</form>
-		</article>
 
 		<!-- Generic -->
 		
@@ -338,6 +309,35 @@
 			</form>
 		</section>
 	</article>
+
+	<!-- Contact -->
+			<article id="contact" class="container box style3">
+				<header>
+					<h2>Contact Us</h2>
+					<p>Have a question or want to get involved with our next event? Send us a message!</p>
+				</header>
+				<form method="post" action="https://formspree.io/kvn@lws.io">
+					<div class="row 50%">
+						<div class="6u 12u$(mobile)">
+							<input type="text" class="text" name="name" placeholder="Name" />
+						</div>
+						<div class="6u$ 12u$(mobile)">
+							<input type="email" class="text" name="_replyto" placeholder="Email" />
+						</div>
+						<div class="12u$">
+							<textarea name="message" placeholder="Message"></textarea>
+						</div>
+						<input type="hidden" name="_subject" value="WiT Site Form Submission!" />
+						<input type="text" name="_gotcha" style="display:none" />
+						<input type="hidden" name="_next" value="http://localhost:1337#thanks" />
+						<div class="12u$">
+							<ul class="actions">
+								<li><input type="submit" value="Send Message" /></li>
+							</ul>
+						</div>
+				</div>
+			</form>
+		</article>
 	
 	<section id="footer">
 		<ul class="icons">
