update to current local version - added images, need to add sponsor images from previous years

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="#" class="image fit"><img src="images/Audience_4.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/talks.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>TALKS</h2>
@@ -70,7 +70,7 @@
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/wshops.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>WORKSHOPS</h2>
@@ -82,7 +82,7 @@
 
 		<!-- Feature 3 -->
 			<article class="container box style1 right">
-				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/network.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>NETWORKING</h2>
